content for home page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,166 @@
-
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <meta charset="UTF-8" />
+        <title>Home | Darnell4Senate</title>
+        <meta name="description" content="Darnell R Shipp's candidacy website"/>
+        <link rel="stylesheet" href="css/small.css"/>
+        <link rel="stylesheet" href="css/medium.css"/>
+        <link rel="stylesheet" href="css/large.ss"/>
+    </head>
+    <body>
+        <header class="header">
+            <img src="https://via.placeholder.com/150x100/" alt="campaign logo">
+        </header>
+        <nav class="nav">
+            <ul class="main-nav">
+                <li class="nav-item active"><a href="index.html">Home</a></li>
+                <li class="nav-item"><a href="involve.html">Get Involved</a></li>
+                <li class="nav-item"><a href="donate.html">Donate</a></li>
+                <li class="nav-item"><a href="about.html">About Me</a></li>
+            </ul>
+        </nav>
+        <main class="main">
+            <div class="hero-container">
+                <img src="https://via.placeholder.com/150x150/" alt="Darnell at campaign speech">
+                <div class="hero-text">
+                    <span class="hero-button donate-button"><a class="hero-link" href="donate.html">Donate</a></span>
+                    <span class="hero-button getinvolved-button"><a class="hero-link" href="involve.html">Get Involved</a></span>
+                </div>
+            </div>
+            <div class="core-values">
+                <div class="core-value">
+                    <h2 class="value">Family First</h2>
+                    <div class="value-info">
+                        <h3 class="info">Protect the Rights of the Unborn and Children</h3>
+                        <div class="value-more-info">
+                            <p class="more-info">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                            </p>
+                        </div>
+                        <h3 class="info">Protect Idaho Family Values</h3>
+                        <div class="value-more-info">
+                            <p class="more-info">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                            </p>
+                        </div>
+                        <h3 class="info">Protect Parent's Rights</h3>
+                        <div class="value-more-info">
+                            <p class="more-info">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="core-value">
+                    <h2 class="value">Truth in Education</h2>
+                    <div class="value-info">
+                        <h3 class="info">Education Not Indoctrination</h3>
+                        <div class="value-more-info">
+                            <p class="more-info">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                            </p>
+                        </div>
+                        <h3 class="info">Money Follows Students</h3>
+                        <div class="value-more-info">
+                            <p class="more-info">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                            </p>
+                        </div>
+                        <h3 class="info">End Common Core</h3>
+                        <div class="value-more-info">
+                            <p class="more-info">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="core-value">
+                    <h2 class="value">Limited Government</h2>
+                    <div class="value-info">
+                        <h3 class="info">Medical Freedom</h3>
+                        <div class="value-more-info">
+                            <p class="more-info">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                            </p>
+                        </div>
+                        <h3 class="info">Protect Second Amendment</h3>
+                        <div class="value-more-info">
+                            <p class="more-info">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                            </p>
+                        </div>
+                        <h3 class="info">Protect First Amendment</h3>
+                        <div class="value-more-info">
+                            <p class="more-info">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="core-value">
+                    <h2 class="value">Strengthen State Sovereignity</h2>
+                    <div class="value-info">
+                        <h3 class="info">Protect Tenth Amendment</h3>
+                        <div class="value-more-info">
+                            <p class="more-info">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                            </p>
+                        </div>
+                        <h3 class="info">Wean Idaho from Federal Funds and Grants</h3>
+                        <div class="value-more-info">
+                            <p class="more-info">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                            </p>
+                        </div>
+                        <h3 class="info">Stop Biden/Federal Overreach</h3>
+                        <div class="value-more-info">
+                            <p class="more-info">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="core-value">
+                    <h2 class="value">Strengthen and Prosper Communities</h2>
+                    <div class="value-info">
+                        <h3 class="info">Protect Local Government</h3>
+                        <div class="value-more-info">
+                            <p class="more-info">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                            </p>
+                        </div>
+                        <h3 class="info">Protect Local Law Enforcement and Keep Them Independent</h3>
+                        <div class="value-more-info">
+                            <p class="more-info">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                            </p>
+                        </div>
+                        <h3 class="info">Protect the Rule of Law Within the Confines of the U.S. and Idaho State Constitutions</h3>
+                        <div class="value-more-info">
+                            <p class="more-info">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </main>
+        <footer class="footer">
+            <div class="contact-info">
+                <h2 class="learn">Contact Us</h2>
+                <span class="contact-link"><a class="fa fa-envelope" href="mailto:dr_shipp2b12@yahoo.com">dr_shipp2b12@yahoo.com</a></span>
+                <span class="contact-link"><a class="fa fa-phone" href="tel:+12082069487">+1(208)206-9487</a></span>
+            </div>
+            <div class="social-media">
+                <span class="social-link"><a class="fa fa-facebook" href="https://www.facebook.com/DarnellShipp4Idaho-110510968201345">DarnellShipp4Idaho</a></span>
+            </div>
+            <div class="footer-info">
+                <p>&copy;<span id="year"></span> | Darnell R. Shipp | Idaho | Attributions
+            </div>
+        </footer>
+        <script src="js/fontawesome.js"></script>
+        <script src="js/footerinfo.js"></script>
+    </body>
+</html>
