--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <meta charset="UTF-8" />
-        <title>Home | Darnell4Senate</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <title>Home | Darnell for Senate</title>
         <meta name="description" content="Darnell R Shipp's candidacy website"/>
+        <link rel="stylesheet" href="css/normalize.css"/>
+        <link rel="stylesheet" href="css/noto-roboto-sans.css"/>
         <link rel="stylesheet" href="css/small.css"/>
         <link rel="stylesheet" href="css/medium.css"/>
         <link rel="stylesheet" href="css/large.ss"/>
@@ -13,6 +16,11 @@
         <header class="header">
             <img src="https://via.placeholder.com/150x100/" alt="campaign logo">
         </header>
+        <div id="nav-icon">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
         <nav class="nav">
             <ul class="main-nav">
                 <li class="nav-item active"><a href="index.html">Home</a></li>
@@ -31,115 +39,115 @@
             </div>
             <div class="core-values">
                 <div class="core-value">
-                    <h2 class="value">Family First</h2>
+                    <span class="core-value-heading"><h2 class="value">Family First</h2></span>
                     <div class="value-info">
-                        <h3 class="info">Protect the Rights of the Unborn and Children</h3>
-                        <div class="value-more-info">
-                            <p class="more-info">
+                        <h3 class="more-info-heading">Protect the Rights of the Unborn and Children</h3>
+                        <div class="more-info-div">
+                            <p class="more-info-text">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                             </p>
                         </div>
-                        <h3 class="info">Protect Idaho Family Values</h3>
-                        <div class="value-more-info">
-                            <p class="more-info">
+                        <h3 class="more-info-heading">Protect Idaho Family Values</h3>
+                        <div class="more-info-div">
+                            <p class="more-info-text">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                             </p>
                         </div>
-                        <h3 class="info">Protect Parent's Rights</h3>
-                        <div class="value-more-info">
-                            <p class="more-info">
+                        <h3 class="more-info-heading">Protect Parent's Rights</h3>
+                        <div class="more-info-div">
+                            <p class="more-info-text">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                             </p>
                         </div>
                     </div>
                 </div>
                 <div class="core-value">
-                    <h2 class="value">Truth in Education</h2>
+                    <span class="core-value-heading"><h2 class="value">Truth in Education</h2></span>
                     <div class="value-info">
-                        <h3 class="info">Education Not Indoctrination</h3>
-                        <div class="value-more-info">
-                            <p class="more-info">
+                        <h3 class="more-info-heading">Education Not Indoctrination</h3>
+                        <div class="more-info-div">
+                            <p class="more-info-text">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                             </p>
                         </div>
-                        <h3 class="info">Money Follows Students</h3>
-                        <div class="value-more-info">
-                            <p class="more-info">
+                        <h3 class="more-info-heading">Money Follows Students</h3>
+                        <div class="more-info-div">
+                            <p class="more-info-text">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                             </p>
                         </div>
-                        <h3 class="info">End Common Core</h3>
-                        <div class="value-more-info">
-                            <p class="more-info">
+                        <h3 class="more-info-heading">End Common Core</h3>
+                        <div class="more-info-div">
+                            <p class="more-info-text">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                             </p>
                         </div>
                     </div>
                 </div>
                 <div class="core-value">
-                    <h2 class="value">Limited Government</h2>
+                    <span class="core-value-heading"><h2 class="value">Limited Government</h2></span>
                     <div class="value-info">
-                        <h3 class="info">Medical Freedom</h3>
-                        <div class="value-more-info">
-                            <p class="more-info">
+                        <h3 class="more-info-heading">Medical Freedom</h3>
+                        <div class="more-info-div">
+                            <p class="more-info-text">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                             </p>
                         </div>
-                        <h3 class="info">Protect Second Amendment</h3>
-                        <div class="value-more-info">
-                            <p class="more-info">
+                        <h3 class="more-info-heading">Protect Second Amendment</h3>
+                        <div class="more-info-div">
+                            <p class="more-info-text">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                             </p>
                         </div>
-                        <h3 class="info">Protect First Amendment</h3>
-                        <div class="value-more-info">
-                            <p class="more-info">
+                        <h3 class="more-info-heading">Protect First Amendment</h3>
+                        <div class="more-info-div">
+                            <p class="more-info-text">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                             </p>
                         </div>
                     </div>
                 </div>
                 <div class="core-value">
-                    <h2 class="value">Strengthen State Sovereignity</h2>
+                    <span class="core-value-heading"><h2 class="value">Strengthen State Sovereignity</h2></span>
                     <div class="value-info">
-                        <h3 class="info">Protect Tenth Amendment</h3>
-                        <div class="value-more-info">
-                            <p class="more-info">
+                        <h3 class="more-info-heading">Protect Tenth Amendment</h3>
+                        <div class="more-info-div">
+                            <p class="more-info-text">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                             </p>
                         </div>
-                        <h3 class="info">Wean Idaho from Federal Funds and Grants</h3>
-                        <div class="value-more-info">
-                            <p class="more-info">
+                        <h3 class="more-info-heading">Wean Idaho from Federal Funds and Grants</h3>
+                        <div class="more-info-div">
+                            <p class="more-info-text">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                             </p>
                         </div>
-                        <h3 class="info">Stop Biden/Federal Overreach</h3>
-                        <div class="value-more-info">
-                            <p class="more-info">
+                        <h3 class="more-info-heading">Stop Biden/Federal Overreach</h3>
+                        <div class="more-info-div">
+                            <p class="more-info-text">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                             </p>
                         </div>
                     </div>
                 </div>
                 <div class="core-value">
-                    <h2 class="value">Strengthen and Prosper Communities</h2>
+                    <span class="core-value-heading"><h2 class="value">Strengthen and Prosper Communities</h2></span>
                     <div class="value-info">
-                        <h3 class="info">Protect Local Government</h3>
-                        <div class="value-more-info">
-                            <p class="more-info">
+                        <h3 class="more-info-heading">Protect Local Government</h3>
+                        <div class="more-info-div">
+                            <p class="more-info-text">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                             </p>
                         </div>
-                        <h3 class="info">Protect Local Law Enforcement and Keep Them Independent</h3>
-                        <div class="value-more-info">
-                            <p class="more-info">
+                        <h3 class="more-info-heading">Protect Local Law Enforcement and Keep Them Independent</h3>
+                        <div class="more-info-div">
+                            <p class="more-info-text">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                             </p>
                         </div>
-                        <h3 class="info">Protect the Rule of Law Within the Confines of the U.S. and Idaho State Constitutions</h3>
-                        <div class="value-more-info">
-                            <p class="more-info">
+                        <h3 class="more-info-heading">Protect the Rule of Law Within the Confines of the U.S. and Idaho State Constitutions</h3>
+                        <div class="more-info-div">
+                            <p class="more-info-text">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                             </p>
                         </div>
@@ -162,5 +170,7 @@
         </footer>
         <script src="js/fontawesome.js"></script>
         <script src="js/footerinfo.js"></script>
+        <script src="js/burger.js"></script>
+        <script src="js/dropdown.js"></script>
     </body>
 </html>
