--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <title>Home | Darnell for Senate</title>
+        <link rel="icon" type="image/x-icon" href="images/favicon.png">
         <meta name="description" content="Darnell R Shipp's candidacy website"/>
         <link rel="stylesheet" href="css/normalize.css"/>
         <link rel="stylesheet" href="css/noto-roboto-sans.css"/>
@@ -14,7 +15,12 @@
     </head>
     <body>
         <header class="header">
-            <img src="https://via.placeholder.com/150x100/" alt="campaign logo">
+            <picture>
+                <source media="(max-width:600px)" srcset="images/small-logo.png">
+                <source media="(max-width:960px)" srcset="images/medium-logo.png">
+                <source media="(min-width:960px)" srcset="images/large-logo.png">
+                <img src="images/logo.png" alt="campaign logo">
+            </picture>
         </header>
         <div id="nav-icon">
             <span></span>
@@ -37,131 +43,58 @@
                     <img src="images/teton.jpg" alt="landscape photo from Tetons">
                 </picture>
                 <div class="hero-text">
-                    <span class="hero-button donate-button"><a class="hero-link" href="donate.html">Donate</a></span>
-                    <span class="hero-button getinvolved-button"><a class="hero-link" href="involve.html">Get Involved</a></span>
+                    <div class="hero-buttons">
+                        <span class="hero-button donate-button"><a class="hero-link" href="donate.html">Donate</a></span>
+                        <span class="hero-button getinvolved-button"><a class="hero-link" href="involve.html">Get Involved</a></span>
+                    </div>
                 </div>
             </div>
             <div class="core-values">
                 <div class="core-value">
-                    <div class="core-value-heading"><span class="caret">></span><h2 class="value">Family First</h2></div>
+                    <div class="core-value-heading"><span class="fa fa-caret-down"></span><h2 class="value">Family First</h2></div>
                     <div class="value-info">
                         <h3 class="more-info-heading">Protect the Rights of the Unborn and Children</h3>
-                        <div class="more-info-div">
-                            <p class="more-info-text">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                            </p>
-                        </div>
                         <h3 class="more-info-heading">Protect Idaho Family Values</h3>
-                        <div class="more-info-div">
-                            <p class="more-info-text">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                            </p>
-                        </div>
                         <h3 class="more-info-heading">Protect Parent's Rights</h3>
-                        <div class="more-info-div">
-                            <p class="more-info-text">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                            </p>
-                        </div>
                     </div>
                 </div>
                 <div class="core-value">
-                    <div class="core-value-heading"><span class="caret">></span><h2 class="value">Truth in Education</h2></div>
+                    <div class="core-value-heading"><span class="fa fa-caret-down"></span><h2 class="value">Truth in Education</h2></div>
                     <div class="value-info">
                         <h3 class="more-info-heading">Education Not Indoctrination</h3>
-                        <div class="more-info-div">
-                            <p class="more-info-text">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                            </p>
-                        </div>
                         <h3 class="more-info-heading">Money Follows Students</h3>
-                        <div class="more-info-div">
-                            <p class="more-info-text">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                            </p>
-                        </div>
                         <h3 class="more-info-heading">End Common Core</h3>
-                        <div class="more-info-div">
-                            <p class="more-info-text">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                            </p>
-                        </div>
                     </div>
                 </div>
                 <div class="core-value">
-                    <div class="core-value-heading"><span class="caret">></span><h2 class="value">Limited Government</h2></div>
+                    <div class="core-value-heading"><span class="fa fa-caret-down"></span><h2 class="value">Limited Government</h2></div>
                     <div class="value-info">
                         <h3 class="more-info-heading">Medical Freedom</h3>
-                        <div class="more-info-div">
-                            <p class="more-info-text">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                            </p>
-                        </div>
                         <h3 class="more-info-heading">Protect Second Amendment</h3>
-                        <div class="more-info-div">
-                            <p class="more-info-text">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                            </p>
-                        </div>
                         <h3 class="more-info-heading">Protect First Amendment</h3>
-                        <div class="more-info-div">
-                            <p class="more-info-text">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                            </p>
-                        </div>
                     </div>
                 </div>
                 <div class="core-value">
-                    <div class="core-value-heading"><span class="caret">></span><h2 class="value">Strengthen State Sovereignity</h2></div>
+                    <div class="core-value-heading"><span class="fa fa-caret-down"></span><h2 class="value">Strengthen State Sovereignity</h2></div>
                     <div class="value-info">
                         <h3 class="more-info-heading">Protect Tenth Amendment</h3>
-                        <div class="more-info-div">
-                            <p class="more-info-text">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                            </p>
-                        </div>
                         <h3 class="more-info-heading">Wean Idaho from Federal Funds and Grants</h3>
-                        <div class="more-info-div">
-                            <p class="more-info-text">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                            </p>
-                        </div>
                         <h3 class="more-info-heading">Stop Biden/Federal Overreach</h3>
-                        <div class="more-info-div">
-                            <p class="more-info-text">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                            </p>
-                        </div>
                     </div>
                 </div>
                 <div class="core-value">
-                    <div class="core-value-heading"><span class="caret">></span><h2 class="value">Strengthen and Prosper Communities</h2></div>
+                    <div class="core-value-heading"><span class="fa fa-caret-down"></span><h2 class="value">Strengthen and Prosper Communities</h2></div>
                     <div class="value-info">
                         <h3 class="more-info-heading">Protect Local Government</h3>
-                        <div class="more-info-div">
-                            <p class="more-info-text">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                            </p>
-                        </div>
                         <h3 class="more-info-heading">Protect Local Law Enforcement and Keep Them Independent</h3>
-                        <div class="more-info-div">
-                            <p class="more-info-text">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                            </p>
-                        </div>
                         <h3 class="more-info-heading">Protect the Rule of Law Within the Confines of the U.S. and Idaho State Constitutions</h3>
-                        <div class="more-info-div">
-                            <p class="more-info-text">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                            </p>
-                        </div>
                     </div>
                 </div>
             </div>
         </main>
         <footer class="footer">
             <div class="contact-info">
-                <h2 class="learn">Contact Us</h2>
+                <h2 class="learn">Contact Information</h2>
                 <span class="contact-link"><i class="fa fa-envelope"></i><a href="mailto:dr_shipp2b12@yahoo.com">dr_shipp2b12@yahoo.com</a></span>
                 <span class="contact-link"><i class="fa fa-phone"></i><a href="tel:+12082069487">+1(208)206-9487</a></span>
             </div>
