--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <title>Home | Darnell for Senate</title>
+        <title>About Me | Darnell for Idaho</title>
         <link rel="icon" type="image/x-icon" href="images/favicon.png">
         <meta name="description" content="Darnell R Shipp's candidacy website"/>
         <link rel="stylesheet" href="css/normalize.css"/>
