--- a/donate.html
+++ b/donate.html
@@ -35,7 +35,7 @@
             </ul>
         </nav>
         <main class="main">
-            <iframe src="https://rallypay.com/covers/8fX1xcjsKLq/contribute" title="Donate to Darnell's Campaign" scrolling="no"></iframe>
+            <iframe src="https://rallypay.com/covers/8fX1xcjsKLq/contribute" title="Donate to Darnell's Campaign"></iframe>
         </main>
         <footer class="footer">
             <div class="contact-info">
