--- a/about.html
+++ b/about.html
@@ -35,59 +35,25 @@
             </ul>
         </nav>
         <main class="main">
-            <div class="hero-container">
+            <div class="darnell-main">
+                <h1 class="darnell-h1">Put Shipp Back in Leadership</h1>
                 <picture>
-                    <source media="(max-width:600px)" srcset="images/teton-small.jpeg">
-                    <source media="(max-width:960px)" srcset="images/teton-medium.jpeg">
-                    <img src="images/teton.jpg" alt="landscape photo from Tetons">
+                    <source media="(max-width:600px)" srcset="images/darnell-small.jpg">
+                    <img src="images/darnell.jpg" alt="Lucy and I">
                 </picture>
-                <div class="hero-text">
-                    <div class="hero-buttons">
-                        <span class="hero-button donate-button"><a class="hero-link" href="donate.html">Donate</a></span>
-                        <span class="hero-button getinvolved-button"><a class="hero-link" href="involve.html">Get Involved</a></span>
-                    </div>
-                </div>
-            </div>
-            <div class="core-values">
-                <div class="core-value">
-                    <div class="core-value-heading"><span class="fa fa-caret-down"></span><h2 class="value">Family First</h2></div>
-                    <div class="value-info">
-                        <h3 class="more-info-heading">Protect the Rights of the Unborn and Children</h3>
-                        <h3 class="more-info-heading">Protect Idaho Family Values</h3>
-                        <h3 class="more-info-heading">Protect Parent's Rights</h3>
-                    </div>
-                </div>
-                <div class="core-value">
-                    <div class="core-value-heading"><span class="fa fa-caret-down"></span><h2 class="value">Truth in Education</h2></div>
-                    <div class="value-info">
-                        <h3 class="more-info-heading">Education Not Indoctrination</h3>
-                        <h3 class="more-info-heading">Money Follows Students</h3>
-                        <h3 class="more-info-heading">End Common Core</h3>
-                    </div>
-                </div>
-                <div class="core-value">
-                    <div class="core-value-heading"><span class="fa fa-caret-down"></span><h2 class="value">Limited Government</h2></div>
-                    <div class="value-info">
-                        <h3 class="more-info-heading">Medical Freedom</h3>
-                        <h3 class="more-info-heading">Protect Second Amendment</h3>
-                        <h3 class="more-info-heading">Protect First Amendment</h3>
-                    </div>
-                </div>
-                <div class="core-value">
-                    <div class="core-value-heading"><span class="fa fa-caret-down"></span><h2 class="value">Strengthen State Sovereignity</h2></div>
-                    <div class="value-info">
-                        <h3 class="more-info-heading">Protect Tenth Amendment</h3>
-                        <h3 class="more-info-heading">Wean Idaho from Federal Funds and Grants</h3>
-                        <h3 class="more-info-heading">Stop Biden/Federal Overreach</h3>
-                    </div>
-                </div>
-                <div class="core-value">
-                    <div class="core-value-heading"><span class="fa fa-caret-down"></span><h2 class="value">Strengthen and Prosper Communities</h2></div>
-                    <div class="value-info">
-                        <h3 class="more-info-heading">Protect Local Government</h3>
-                        <h3 class="more-info-heading">Protect Local Law Enforcement and Keep Them Independent</h3>
-                        <h3 class="more-info-heading">Protect the Rule of Law Within the Confines of the U.S. and Idaho State Constitutions</h3>
-                    </div>
+                <div class="darnell-div">
+                    <p class="darnell-p">
+                        I recently retired from a thirty-year career with the Idaho National Laboratory where my position with the company was a project/maintenance manager for the world's largest nuclear test reactor.
+                        <br>
+                        <br>
+                        I'm a constitutional conservative. My support lies with the right to life, protecting Idaho family values, and parental rights. It is my belief that in regards to education, money should follow the child and Common Core should be done away with.
+                        <br>
+                        <br>
+                        A large reason that I am running for office is my concern surrounding government outreach, specifically at the federal level. Vaccine mandates are a threat; they force employees throughout Idaho to choose between bodily autonomy and a paycheck.
+                        <br>
+                        <br>
+                        My beautiful wife, Lucy, and I live in Egin. I am the father of seven and a grandfather of twenty-five. This is one of the most exciting times in the history of this world to be alive. It is a time to stand for freedom; for us, for our children, and for our grandchildren.
+                    </p>
                 </div>
             </div>
         </main>
