--- a/about.html
+++ b/about.html
@@ -38,7 +38,8 @@
             <div class="darnell-main">
                 <h1 class="darnell-h1">Put Shipp Back in Leadership</h1>
                 <picture>
-                    <source media="(max-width:600px)" srcset="images/darnell-small.jpg">
+                    <source media="(max-width:600px)" srcset="images/darnell-really-small.jpg">
+                    <source media="(min-width:600px)" srcset="images/darnell-small.jpg">
                     <img src="images/darnell.jpg" alt="Lucy and I">
                 </picture>
                 <div class="darnell-div">
