--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <div class="hero-text">
                     <div class="hero-buttons">
                         <span class="hero-button donate-button"><a class="hero-link" href="donate.html">Donate</a></span>
-                        <span class="hero-button getinvolved-button"><a class="hero-link" href="involve.html">Get Involved</a></span>
+                        <!--<span class="hero-button getinvolved-button"><a class="hero-link" href="involve.html">Get Involved</a></span>-->
                     </div>
                 </div>
             </div>
