--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
         </nav>
         <main class="main">
             <div class="darnell-main">
-                <h1 class="darnell-h1">Put Shipp Back in Leadership</h1>
+                <h1 class="darnell-h1">Put Shipp in Leadership</h1>
                 <picture>
                     <source media="(max-width:600px)" srcset="images/darnell-really-small.jpg">
                     <source media="(min-width:600px)" srcset="images/darnell-small.jpg">
@@ -44,7 +44,7 @@
                 </picture>
                 <div class="darnell-div">
                     <p class="darnell-p">
-                        I recently retired from a thirty-year career with the Idaho National Laboratory where my position with the company was a project/maintenance manager for the world's largest nuclear test reactor.
+                        I recently retired from a thirty-year career with the Idaho National Laboratory where my position with the company was a maintenance manager for the world's largest nuclear test reactor.
                         <br>
                         <br>
                         I'm a constitutional conservative. My support lies with the right to life, protecting Idaho family values, and parental rights. It is my belief that in regards to education, money should follow the child and Common Core should be done away with.
