changed image and text

--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
                 </picture>
                 <div class="darnell-div">
                     <p class="darnell-p">
-                        I recently retired from a thirty-year career with the Idaho National Laboratory where my position with the company was a maintenance manager for the world's largest nuclear test reactor.
+                        I recently retired from a thirty-year career with the Idaho National Laboratory where my position with the company was a maintenance planner for the world's largest nuclear test reactor.
                         <br>
                         <br>
                         I'm a constitutional conservative. My support lies with the right to life, protecting Idaho family values, and parental rights. It is my belief that in regards to education, money should follow the child and Common Core should be done away with.
