--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
         <main class="main">
             <div class="hero-container">
                 <picture>
-                    <source media="(max-width:600px)" srcset="images/teton-small.jpeg">
-                    <source media="(max-width:960px)" srcset="images/teton-medium.jpeg">
-                    <img src="images/teton.jpg" alt="landscape photo from Tetons">
+                    <source media="(max-width:600px)" srcset="images/patriotic-small.jpg">
+                    <source media="(max-width:960px)" srcset="images/patriotic-medium.jpg">
+                    <img src="images/patriotic.jpg" alt="Patriotic eagle flying in front of a flowing flag of the United States of America">
                 </picture>
                 <div class="hero-text">
                     <div class="hero-buttons">
