--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <title>Home | Darnell for Idaho</title>
         <link rel="icon" type="image/x-icon" href="images/favicon.png">
-        <meta name="description" content="Darnell R Shipp's candidacy website"/>
+        <meta name="description" content="darnellshipp4idaho site for Darnell R. Shipp's candidacy for Idaho Senate"/>
         <link rel="stylesheet" href="css/normalize.css"/>
         <link rel="stylesheet" href="css/noto-roboto-sans.css"/>
         <link rel="stylesheet" href="css/small.css"/>
