--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
         </nav>
         <main class="main">
             <div class="darnell-main">
-                <h1 class="darnell-h1">Put Shipp in Leadership</h1>
+                <h1 class="darnell-h1">Put SHIPP in LeaderSHIPP</h1>
                 <picture>
                     <source media="(max-width:600px)" srcset="images/darnell-really-small.jpg">
                     <source media="(min-width:600px)" srcset="images/darnell-small.jpg">
