--- a/index.html
+++ b/index.html
@@ -6,22 +6,12 @@
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <title>Home | Darnell for Idaho</title>
         <link rel="icon" type="image/x-icon" href="images/favicon.png">
-        <meta name="description" content="darnellshipp4idaho site for Darnell R. Shipp's candidacy for Idaho Senate"/>
+        <meta name="description" content="darnellshipp4idaho home page for Darnell R. Shipp's candidacy for Idaho Senate"/>
         <link rel="stylesheet" href="css/normalize.css"/>
-        <link rel="stylesheet" href="css/noto-roboto-sans.css"/>
-        <link rel="stylesheet" href="css/small.css"/>
-        <link rel="stylesheet" href="css/medium.css"/>
-        <link rel="stylesheet" href="css/large.css"/>
+        <link rel="stylesheet" href="css/css.css"/>
     </head>
     <body>
-        <header class="header">
-            <picture>
-                <source media="(max-width:600px)" srcset="images/small-logo.png">
-                <source media="(max-width:960px)" srcset="images/medium-logo.png">
-                <source media="(min-width:960px)" srcset="images/large-logo.png">
-                <img src="images/logo.png" alt="campaign logo">
-            </picture>
-        </header>
+        <header class="header" id="main-header"></header>
         <div id="nav-icon">
             <span></span>
             <span></span>
@@ -31,7 +21,7 @@
             <ul class="main-nav">
                 <li class="nav-item active"><a href="index.html">Home</a></li>
                 <li class="nav-item"><a href="donate.html">Donate</a></li>
-                <li class="nav-item"><a href="about.html">About Me</a></li>
+                <li class="nav-item"><a href="donate.html">About Me</a></li>
             </ul>
         </nav>
         <main class="main">
@@ -91,22 +81,8 @@
                 </div>
             </div>
         </main>
-        <footer class="footer">
-            <div class="contact-info">
-                <h2 class="learn">Contact Information</h2>
-                <span class="contact-link"><i class="fa fa-envelope"></i><a href="mailto:dr_shipp2b12@yahoo.com">dr_shipp2b12@yahoo.com</a></span>
-                <span class="contact-link"><i class="fa fa-phone"></i><a href="tel:+12082069487">+1(208)206-9487</a></span>
-            </div>
-            <div class="social-media">
-                <span class="social-link"><i class="fa fa-facebook"></i><a href="https://www.facebook.com/DarnellShipp4Idaho-110510968201345">DarnellShipp4Idaho</a></span>
-            </div>
-            <div class="footer-info">
-                <p>&copy;<span id="year"></span> | Darnell R. Shipp | Idaho
-            </div>
-        </footer>
-        <script src="js/fontawesome.js"></script>
-        <script src="js/footerinfo.js"></script>
+        <footer class="footer" id="main-footer"></footer>
         <script src="js/burger.js"></script>
-        <script src="js/dropdown.js"></script>
+        <script src="js/main.js" type="module"></script>
     </body>
 </html>
