--- a/donate.html
+++ b/donate.html
@@ -6,7 +6,7 @@
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <title>Donate | Darnell for Idaho</title>
         <link rel="icon" type="image/x-icon" href="images/favicon.png">
-        <meta name="description" content="Darnell R Shipp's candidacy website"/>
+        <meta name="description" content="Donation page for Darnell Shipp's candidacy"/>
         <link rel="stylesheet" href="css/normalize.css"/>
         <link rel="stylesheet" href="css/css.css"/>
         <script src="js/donate.js" type="module"></script>
