--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <title>About Me | Darnell for Idaho</title>
         <link rel="icon" type="image/x-icon" href="images/favicon.png">
-        <meta name="description" content="Darnell R Shipp's candidacy website"/>
+        <meta name="description" content="Page describing Darnell Shipp"/>
         <link rel="stylesheet" href="css/normalize.css"/>
         <link rel="stylesheet" href="css/css.css"/>
         <script src="js/about.js" type="module"></script>
