--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <ul class="main-nav">
                 <li class="nav-item active"><a href="index.html">Home</a></li>
                 <li class="nav-item"><a href="donate.html">Donate</a></li>
-                <li class="nav-item"><a href="donate.html">About Me</a></li>
+                <li class="nav-item"><a href="about.html">About Me</a></li>
             </ul>
         </nav>
         <main class="main">
